# Lights-Please

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  Roamap.md  leak.txt  main.cpp  mem_allocator.cpp  mem_allocator.h  platform.cpp  rebuild.sh
docs/: physics-readiness-checklist.md  rendering-implementation.md
engine/: camera.cpp  camera.h  config.h  demo_scene.cpp  demo_scene.h  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_layout.cpp  engine.cpp  engine.h  entity.cpp  entity.h  geometry.h  job_system.cpp  job_system.h  loadModel.cpp  loadModel.h  logger.h  material.cpp  material.hpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  platform.cpp  platform.h  renderer.cpp  renderer.h  texture.cpp  texture.h  thread_pool.cpp  thread_pool.h  ubo.cpp  ubo.h
engine/asset/: asset_pipeline.cpp  asset_pipeline.h  runtime_asset_registry.cpp  runtime_asset_registry.h
engine/entity/: AssetManager.h  entity.cpp  entity.h  renderSystem.cpp  renderSystem.h  sceneGraph.cpp  sceneGraph.h  systems.cpp  systems.h
engine/math/: vector.cpp  vector.hpp
engine/memory/: linear_allocator.cpp  linear_allocator.h  mem_allocator.cpp  pool_allocator.cpp  pool_allocator.h
engine/renderer/: descriptor_allocator.cpp  descriptor_allocator.h  descriptor_layout.cpp  descriptor_layout.h  material.cpp  material.hpp  mesh.cpp  mesh.h  pipeline.cpp  renderer.cpp  renderer.h  texture.cpp  texture.h  ubo.cpp  ubo.h  vma_implementation.cpp
models/: Minion.lmesh
shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: vector.hpp
tests/: allocator_test.cpp  asset_pipeline_test.cpp  camera_test.cpp  entity_manager_test.cpp  gravity_system_test.cpp  job_system_test.cpp  load_model_test.cpp  math_vector_test.cpp  render_system_test.cpp
textures/: white.ltex
vector/: vector.cpp
